--- a/src/pages/aboutPalmachPage/AboutPalmachPage.css
+++ b/src/pages/aboutPalmachPage/AboutPalmachPage.css
@@ -2,8 +2,30 @@
   font-size: 8vw;
   width: 90%;
   text-align: right;
-  height: 59vh;
+  height: 45vh;
   position: relative;
-  overflow: scroll;
-  top: -7vh;
+  overflow-y: scroll;
+  top: -2vh;
+  direction: ltr;
+}
+
+::-webkit-scrollbar {
+  width: 0.5em;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgba(155, 184, 238, 0.714);
+  border-radius: 1em;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(141, 183, 235, 0.618);
+  border-radius: 1em;
+}
+
+.scroll-text {
+  direction: rtl;
+  margin-right: 4vw;
+  padding-bottom: 1vh;
+  padding-top: 1vh;
 }
