--- a/src/pages/aboutPalmachPage/AboutPalmachPage.css
+++ b/src/pages/aboutPalmachPage/AboutPalmachPage.css
@@ -1,38 +1,60 @@
 .scroll-text-container {
-  font-size: 8vw;
+  font-size: 9vw;
   width: 90%;
   text-align: right;
-  height: 45vh;
+  height: 52vh;
   position: relative;
   overflow-y: scroll;
-  top: -2vh;
+  top: 2vh;
   direction: ltr;
+  margin-top: 2vh;
 }
 
 ::-webkit-scrollbar {
-  width: 0.5em;
+  width: 0.3em;
 }
 
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px rgba(155, 184, 238, 0.714);
+  /* box-shadow: inset 0 0 5px rgba(155, 184, 238, 0.714); */
+  box-shadow: inset 0 0 5px rgba(219, 226, 238, 0.865);
   border-radius: 1em;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: rgba(141, 183, 235, 0.618);
+  /* background: rgba(141, 183, 235, 0.618); */
+  background: rgba(255, 255, 255, 0.769);
   border-radius: 1em;
 }
 
 .scroll-text {
   direction: rtl;
   margin-right: 4vw;
-  padding-bottom: 1vh;
-  padding-top: 1vh;
+  /* padding-bottom: 0.3vh; */
+  /* padding-top: 0.3vh; */
+}
+
+.chracter-btn-container {
+  display: flex;
+  position: relative;
+  width: 100%;
+  height: 30%;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  top: 7vh;
+}
+
+.start-mission-btn {
+  top: 3vh;
+  right: -2vw;
+  min-width: 45vw;
+  padding: 0;
 }
 
 .small-gif {
-  width: 34%;
+  width: 41%;
   transform: scaleX(-1);
-  top: 10vh;
-  right: -29vw;
+  /* position: absolute;
+  top: 72vh;
+  right: 2vw; */
 }
