--- a/src/pages/aboutPalmachPage/AboutPalmachPage.css
+++ b/src/pages/aboutPalmachPage/AboutPalmachPage.css
@@ -5,7 +5,7 @@
   height: 52vh;
   position: relative;
   overflow-y: scroll;
-  top: 2vh;
+  top: -6vh;
   direction: ltr;
   margin-top: 2vh;
 }
@@ -49,9 +49,28 @@
   right: -2vw;
   min-width: 45vw;
   padding: 0;
+  position: absolute;
+  right: 49vw;
+  top: 11vh;
+  transition: visuality ease 2s;
+  color: #1b1464;
+  min-height: 4vh;
+  padding: 0.2em;
+  font-family: bold-text;
+  font-weight: 900;
+  border: solid #1b1464 1.2vw;
+  font-size: 5.5vw;
+  background-color: #1b1464(255, 255, 255, 0);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .small-gif {
+  position: absolute;
+  right: 4vw;
+  top: -1vh;
   width: 41%;
   transform: scaleX(-1);
   /* position: absolute;
