added the mission1 page and fixed the prev-next problem

--- a/src/App.css
+++ b/src/App.css
@@ -52,10 +52,10 @@ body {
 }
 
 .btns {
-  width: 16vw;
+  min-width: 45vw;
   height: 5vh;
   border-radius: 3em;
-  font-size: 2.5vw;
+  /* font-size: 2.5vw; */
   cursor: pointer;
-  border: solid rgba(82, 82, 82, 0.659);
+  /* border: solid rgba(82, 82, 82, 0.659); */
 }
