--- a/src/pages/openingPage/OpeningPage.css
+++ b/src/pages/openingPage/OpeningPage.css
@@ -32,8 +32,6 @@
   margin-top: 0;
 }
 
-
-
 .start-lomda-btn {
   margin-bottom: 20vh;
 }
@@ -78,7 +76,7 @@
     font-weight: 900;
     border: solid #1b1464 1.2vw;
     color: #1b1464;
-    font-size: 8vw;
+    font-size: 7vw;
     background-color: rgba(255, 255, 255, 0);
     position: relative;
     top: -4vh;
@@ -86,5 +84,9 @@
     width: fit-content;
     height: -moz-fit-content;
     height: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 }
