added logic for mission 1. need to add logic to the next btn for mission 2 and readonly to input after correct

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 }
 
 @font-face {
-  font-family: text-font-bold;
+  font-family: bold-text;
   src: url(./../src/fonts/FbSpoiler-Bold.otf);
 }
 
@@ -47,7 +47,7 @@ body {
 }
 
 .bold-text {
-  font-family: text-font-bold;
+  font-family: bold-text;
   font-weight: 900;
 }
 
