--- a/src/pages/mission1/Mission1.css
+++ b/src/pages/mission1/Mission1.css
@@ -102,11 +102,11 @@
 }
 
 .correct {
-  background-color: #39b54a;
+  background-color: #64cc48b3;
 }
 
 .wrong {
-  background-color: #ed1c24;
+  background-color: #eb5258bd;
 }
 
 .feedback-text {
@@ -117,9 +117,9 @@
 }
 
 .feedback-text-correct {
-  color: #39b54a;
+  color: #4eb233;
 }
 
 .feedback-text-wrong {
-  color: #ed1c24;
+  color: #eb5258bd;
 }
