--- a/src/App.css
+++ b/src/App.css
@@ -64,3 +64,7 @@ body {
   cursor: pointer;
   /* border: solid rgba(82, 82, 82, 0.659); */
 }
+
+::selection {
+  background: rgb(176, 212, 255);
+}
