--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,10 @@ body {
   /* background: #a5eaf0b6; */
 }
 
+/* .middle-background {
+  
+} */
+
 .text {
   font-family: text-font;
   color: #1b1464;
