--- a/src/pages/mission2/Mission2.css
+++ b/src/pages/mission2/Mission2.css
@@ -11,7 +11,7 @@
   top: 0vh;
   margin-bottom: 5vh;
   margin-top: 6vh;
-  color: #1b1464;
+  /* color: #1b1464; */
 }
 
 .mission-instruction-paragraph {
