--- a/src/components/phoneIcon/PhoneIcon.css
+++ b/src/components/phoneIcon/PhoneIcon.css
@@ -14,12 +14,74 @@
   backface-visibility: hidden;
   -webkit-perspective: 300px;
   perspective: 300px; */
-  -webkit-animation: tilt-shaking 1s /* cubic-bezier(0.36, 0.07, 0.19, 0.97) */
-    infinite;
-  animation: tilt-shaking 1s infinite;
+
+  /* -webkit-animation: tilt-shaking 1s 
+    infinite; */
+  /* animation: tilt-shaking 1s ease-in-out infinite; */
+
+  /* animation: shake-animation 4.72s ease infinite; */
+  /* transform-origin: 50% 50%; */
+
+  animation: shake-animation 3.5s infinite;
+
   /* cubic-bezier(0.36, 0.07, 0.19, 0.97) infinite; */
   /* -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0); */
+}
+
+@keyframes shake-animation {
+  0% {
+  }
+  10% {
+    -webkit-transform: rotate(5deg);
+    -moz-transform: rotate(5deg);
+    -o-transform: rotate(5deg);
+  }
+  20% {
+    -webkit-transform: rotate(-5deg);
+    -moz-transform: rotate(-5deg);
+    -o-transform: rotate(-5deg);
+  }
+  30% {
+    -webkit-transform: rotate(5deg);
+    -moz-transform: rotate(5deg);
+    -o-transform: rotate(5deg);
+  }
+  40% {
+    -webkit-transform: rotate(-5deg);
+    -moz-transform: rotate(-5deg);
+    -o-transform: rotate(-5deg);
+  }
+  50% {
+    -webkit-transform: rotate(5deg);
+    -moz-transform: rotate(5deg);
+    -o-transform: rotate(5deg);
+  }
+  60% {
+    -webkit-transform: rotate(-5deg);
+    -moz-transform: rotate(-5deg);
+    -o-transform: rotate(-5deg);
+  }
+  70% {
+    -webkit-transform: rotate(5deg);
+    -moz-transform: rotate(5deg);
+    -o-transform: rotate(5deg);
+  }
+  80% {
+    -webkit-transform: rotate(-5deg);
+    -moz-transform: rotate(-5deg);
+    -o-transform: rotate(-5deg);
+  }
+  90% {
+    -webkit-transform: rotate(5deg);
+    -moz-transform: rotate(5deg);
+    -o-transform: rotate(5deg);
+  }
+  100% {
+    -webkit-transform: rotate(-5deg);
+    -moz-transform: rotate(-5deg);
+    -o-transform: rotate(-5deg);
+  }
 }
 
 @keyframes tilt-shaking {
@@ -28,9 +90,12 @@
   }
   25% {
     transform: rotate(5deg);
+    /* -webkit-transform: rotate(10deg); */
   }
   50% {
     transform: rotate(0eg);
+    /* -webkit-transform-origin: center center;
+    -webkit-transform: rotate(-10deg); */
   }
   75% {
     transform: rotate(-5deg);
@@ -39,37 +104,3 @@
     transform: rotate(0deg);
   }
 }
-
-/* @keyframes vibrate {
-  0%,
-  2%,
-  4%,
-  6%,
-  8%,
-  10%,
-  12%,
-  14%,
-  16%,
-  18% {
-    -webkit-transform: translate3d(-1px, 0, 0);
-    transform: translate3d(-1px, 0, 0);
-  }
-  1%,
-  3%,
-  5%,
-  7%,
-  9%,
-  11%,
-  13%,
-  15%,
-  17%,
-  19% {
-    -webkit-transform: translate3d(1px, 0, 0);
-    transform: translate3d(1px, 0, 0);
-  }
-  20%,
-  100% {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
-} */
