--- a/src/pages/introPage/IntroPage.css
+++ b/src/pages/introPage/IntroPage.css
@@ -32,7 +32,7 @@
   top: 0vh;
   margin-bottom: 5vh;
   margin-top: 2vh;
-  border-top: solid;
+  border-top: solid 4px;
   /* color: #1b1464; */
 }
 
