--- a/src/components/upArrow/UpArrow.css
+++ b/src/components/upArrow/UpArrow.css
@@ -6,23 +6,14 @@
   width: 8vw;
   position: relative;
   top: -3vh;
-  /* animation: move-up-down 2s infinite; */
+  animation: move-up-down 1s infinite alternate;
 }
 
 @keyframes move-up-down {
   0% {
-    top: -3vh;
-  }
-  25% {
-    top: -1vh;
-  }
-  50% {
-    top: 0vh;
-  }
-  75% {
-    top: -1vh;
+    transform: translateY(0);
   }
   100% {
-    top: -3vh;
+    transform: translateY(-10px);
   }
 }
