fixed all errors. changed placeholders in rellevant missionns

--- a/src/pages/mission2/Mission2.css
+++ b/src/pages/mission2/Mission2.css
@@ -45,6 +45,11 @@
   height: 3vh;
 }
 
+.input-mission2::placeholder {
+  font-size: 6vw;
+  /* color: rgba(250, 247, 247, 0.728); */
+}
+
 .answer-paragraph {
   position: absolute;
   color: #4eb233;
