--- a/src/pages/mission3/Mission3.css
+++ b/src/pages/mission3/Mission3.css
@@ -9,7 +9,8 @@
 
 .input-mission3 {
   width: 20vw;
-  color: white;
+  color: rgba(250, 247, 247, 0.858);
+  /* color: white; */
 }
 ::-webkit-input-placeholder {
   font-size: 20px;
@@ -17,10 +18,10 @@
 ::-moz-placeholder {
   font-size: 20px;
 }
-:-ms-input-placeholder {
+.input-mission3:-ms-input-placeholder {
   font-size: 20px;
 }
-::placeholder {
+.input-mission3::placeholder {
   font-size: 20px;
 }
 
