--- a/src/App.css
+++ b/src/App.css
@@ -68,14 +68,21 @@ body {
 }
 
 .btns {
-  min-width: 45vw;
+  min-width: 24vw;
   height: 5vh;
   border-radius: 3em;
-  /* font-size: 2.5vw; */
   cursor: pointer;
-  /* border: solid rgba(82, 82, 82, 0.659); */
 }
 
 ::selection {
   background: rgb(176, 212, 255);
+}
+
+@media only screen and (max-width: 768px) {
+  .btns {
+    min-width: 45vw;
+    height: 5vh;
+    border-radius: 3em;
+    cursor: pointer;
+  }
 }
