--- a/src/pages/introPage/IntroPage.css
+++ b/src/pages/introPage/IntroPage.css
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   color: #1b1464;
+  height: 80vh;
 }
 
 .next-btn {
@@ -23,11 +24,29 @@
   bottom: 7vh;
 }
 
+.character-gif {
+  width: 25vw;
+  position: relative;
+  top: -2vh;
+}
+
+.text {
+  font-family: text-font;
+}
+
+.intro-text {
+  font-size: 3vw;
+  width: 65vw;
+  font-weight: 500;
+  position: relative;
+  top: -6vh;
+}
+
 .mission-title {
   position: absolute;
   font-family: bold-text;
   font-weight: 900;
-  font-size: 12vw;
+  font-size: 6vw;
   /* width: 97%; */
   top: 0vh;
   margin-bottom: 5vh;
@@ -36,36 +55,72 @@
   /* color: #1b1464; */
 }
 
-.start-mission-btn {
-  margin: 0;
-  position: relative;
-  top: -5vh;
-  right: -16vw;
-  /* right: 30vw; */
-}
+@media only screen and (max-width: 768px) {
+  /* .bubble-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #1b1464;
+  } */
 
-.back-to-explenation-btn {
+  .next-btn {
+    /* background-image: url("."); */
+    /* width: 13vw;
+  height: 7vh;
+  background-size: 100% 100%;
   position: relative;
-  right: -16vw;
-  top: -3vh;
-}
+  right: 34vw;
+  top: 3vh; */
+    width: 13vw;
+    height: 7vh;
+    background-size: 100% 100%;
+    /* transform: scaleX(-1); */
+    position: absolute;
+    right: 78vw;
+    bottom: 7vh;
+  }
 
-.character-gif {
-  width: 68%;
-  position: relative;
-  top: 1vh;
-}
+  .mission-title {
+    position: absolute;
+    font-family: bold-text;
+    font-weight: 900;
+    font-size: 12vw;
+    /* width: 97%; */
+    top: 0vh;
+    margin-bottom: 5vh;
+    margin-top: 2vh;
+    border-top: solid 4px;
+    /* color: #1b1464; */
+  }
 
-.text {
-  font-family: text-font;
-}
+  .start-mission-btn {
+    margin: 0;
+    position: relative;
+    top: -5vh;
+    right: -16vw;
+    /* right: 30vw; */
+  }
 
-.intro-text {
-  font-size: 9vw;
-  width: 80%;
-  font-weight: 500;
-  position: relative;
-  top: -3vh;
+  .back-to-explenation-btn {
+    position: relative;
+    right: -16vw;
+    top: -3vh;
+  }
+
+  .character-gif {
+    width: 68%;
+    position: relative;
+    top: 1vh;
+  }
+
+  .intro-text {
+    font-size: 9vw;
+    width: 80%;
+    font-weight: 500;
+    position: relative;
+    top: -3vh;
+  }
 }
 
 /*
