--- a/src/pages/openingPage/OpeningPage.css
+++ b/src/pages/openingPage/OpeningPage.css
@@ -24,16 +24,48 @@
 }
 
 .opening-title1 {
-  font-size: 21vw;
+  font-size: 12vw;
+  margin-top: 11vh;
 }
 
 .opening-title2 {
-  font-size: 15vw;
-  margin-top: 0;
+  font-size: 7vw;
+  margin-top: -4vh;
 }
 
 .start-lomda-btn {
   margin-bottom: 20vh;
+}
+
+.btns {
+  width: 40vw;
+  height: 6vh;
+  border-radius: 3em;
+  font-size: 3vw;
+  cursor: pointer;
+}
+
+.start-lomda-btn {
+  min-width: 22vw;
+  min-height: 6vh;
+  padding: 0.6em;
+  margin-top: 10vh;
+  font-family: text-font;
+  font-weight: 900;
+  border: solid #1b1464 0.5vw;
+  color: #1b1464;
+  font-size: 3vw;
+  background-color: rgba(255, 255, 255, 0);
+  position: relative;
+  top: 2vh;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 @media only screen and (max-width: 768px) {
