--- a/src/pages/mission1/Mission1.css
+++ b/src/pages/mission1/Mission1.css
@@ -56,7 +56,7 @@
 .info-container-wrapper {
   width: 100vw;
   height: 100vh;
-  background-color: rgba(255, 255, 255, 0.504);
+  background-color: rgb(255 255 255 / 79%);
   position: absolute;
   z-index: 1;
   display: flex;
