--- a/src/pages/mission2/Mission2.css
+++ b/src/pages/mission2/Mission2.css
@@ -43,6 +43,8 @@
   text-align: center;
   width: 70vw;
   height: 3vh;
+  margin-bottom: 4vh;
+  margin-top: 3vh;
 }
 
 .input-mission2::placeholder {
