--- a/src/pages/mission4/Mission4.css
+++ b/src/pages/mission4/Mission4.css
@@ -10,7 +10,7 @@
 
 .mission4-question-paragrapgh {
   top: 6vh;
-  font-size: 8vw;
+  font-size: 7vw;
   margin-top: 9vh;
 }
 
@@ -69,4 +69,5 @@
   color: #b3faa0;
   font-size: 5.5vw;
   top: 60vh;
+  margin-top: 5vh;
 }
