--- a/src/pages/aboutPage/AboutPage.css
+++ b/src/pages/aboutPage/AboutPage.css
@@ -4,12 +4,14 @@
   font-size: 23vw;
   border: none;
   margin-bottom: 3vh;
+  position: absolute;
+  top: -2vh;
 }
 
 .about-paragtapgh {
   font-size: 9vw;
   color: white;
-  font-family: bold-text;
+  font-family: text-font;
   margin-bottom: -2.7vh;
 }
 
@@ -20,6 +22,6 @@
   justify-content: space-around;
   height: 60vh;
   position: relative;
-  top: -4vh;
-  margin-top: 3vh;
+  top: -9vh;
+  margin-top: 18vh;
 }
