--- a/src/pages/introPage/IntroPage.css
+++ b/src/pages/introPage/IntroPage.css
@@ -55,6 +55,17 @@
   /* color: #1b1464; */
 }
 
+.blinking-cursor::after {
+  content: "|";
+  animation: blink 1s step-start infinite;
+}
+
+@keyframes blink {
+  50% {
+    opacity: 0;
+  }
+}
+
 @media only screen and (max-width: 768px) {
   /* .bubble-container {
     display: flex;
@@ -110,16 +121,18 @@
 
   .character-gif {
     width: 66%;
-    position: relative;
-    top: 1vh;
+    /* position: relative;
+    top: 1vh; */
+    position: absolute;
+    top: 16vh;
   }
 
   .intro-text {
     font-size: 8vw;
     width: 80%;
     font-weight: 500;
-    position: relative;
-    top: -3vh;
+    position: absolute;
+    top: 50vh;
   }
 }
 
