--- a/src/App.css
+++ b/src/App.css
@@ -88,6 +88,11 @@ body {
   background: rgb(176, 212, 255);
 }
 
+input:focus {
+  outline: none;
+  box-shadow: 0px 0px 8px 2px rgba(193, 193, 193, 0.824);
+}
+
 @media only screen and (max-width: 768px) {
   .btns {
     min-width: 45vw;
