--- a/src/pages/aboutPalmachPage/AboutPalmachPage.css
+++ b/src/pages/aboutPalmachPage/AboutPalmachPage.css
@@ -174,6 +174,11 @@
   }
 
   .scroll-text-smaller {
-    font-size: 9.5vw;
+    /* font-size: 9.5vw; */
+    font-size: 8vw;
+  }
+
+  .scroll-height-shorter {
+    height: 37vh;
   }
 }
