--- a/src/pages/mission4/Mission4.css
+++ b/src/pages/mission4/Mission4.css
@@ -6,10 +6,13 @@
 .mission4-instruction-paragrapgh {
   font-size: 8vw;
   top: -18vh;
+  margin-top: 11vh;
 }
 
 .mission4-question-paragrapgh {
-  top: 10vh;
+  position: absolute;
+  top: 26vh;
+  /* top: 10vh; */
   font-size: 7vw;
   margin-top: 9vh;
 }
@@ -23,7 +26,9 @@
 }
 
 .phone-number-for-question {
-  top: -27vh;
+  position: absolute;
+  top: 16vh;
+  /* top: -27vh; */
   border: solid white 2px;
   border-radius: 1em;
   margin-top: 3vh;
@@ -36,9 +41,11 @@
 
 .input-mission4 {
   width: 63;
-  position: relative;
-  top: -14vh;
-  /* color: rgba(250, 247, 247, 0.927); */
+  position: absolute;
+  top: 53vh;
+  /* position: relative;
+  top: -14vh; */
+
   color: #1b1464;
   height: fit-content;
   word-wrap: break-word;
@@ -62,6 +69,7 @@
   top: 67vh;
   border: solid white;
   color: white;
+  margin-top: 17vh;
 }
 
 .answer-paragrapgh-mission-4 {
@@ -70,4 +78,5 @@
   font-size: 5.5vw;
   top: 63vh;  
   margin-top: 5vh;
+  top: 66vh;
 }
