--- a/src/pages/mission1/Mission1.css
+++ b/src/pages/mission1/Mission1.css
@@ -21,7 +21,8 @@
   font-weight: 500;
   position: absolute;
   top: 12vh;
-  padding-bottom: 0.5em;
+  padding-bottom: 1em;
+  padding-top: 1em;
   z-index: 1;
 }
 
@@ -98,7 +99,7 @@
   background-color: rgba(255, 255, 255, 0);
   border-bottom: solid #1b1464 0.2em;
   position: relative;
-  top: -10vh;
+  top: -11vh;
   text-align: center;
   padding: 0.3em;
   border-radius: 0.7em;
