added scroll animation

--- a/src/pages/aboutPalmachPage/AboutPalmachPage.css
+++ b/src/pages/aboutPalmachPage/AboutPalmachPage.css
@@ -75,6 +75,62 @@
   justify-content: center;
 }
 
+.scroll {
+	width: 60px;
+	height: 60px;
+	border: 2px solid #333;
+	border-radius: 50%;
+	position: absolute;
+  top: 63vh;
+	animation: down 1.5s infinite;
+	-webkit-animation: down 1.5s infinite;
+	/* &::before {
+		content: '';
+		position: absolute;
+		top: 15px;
+		left: 18px;
+		width: 18px;
+		height: 18px;
+		border-left: 2px solid #333;
+  	border-bottom: 2px solid #333;
+		transform: rotate(-45deg);
+	} */
+}
+
+.scroll::before {
+  content: '';
+  position: absolute;
+  top: 15px;
+  left: 18px;
+  width: 18px;
+  height: 18px;
+  border-left: 2px solid #1b1464;
+  border-bottom: 2px solid #1b1464;
+  transform: rotate(-45deg);
+}
+
+.scroll-light {
+  border-color: white;
+}
+
+.scroll-light::before {
+  border-left: 2px solid white;
+  border-bottom: 2px solid white;
+}
+
+@keyframes down {
+	0% {
+		transform: translate(0);
+	}
+	20% {
+		transform: translateY(10px);
+	}
+	40% {
+		transform: translate(0);
+	}
+}
+
+
 @media only screen and (max-width: 768px) {
   .scroll-text-container {
     font-size: 8.5vw;
